# PruebaIA

./: README.md  arquitectura_ia_trading_xauusd.md  pyproject.toml
scripts/: run_implementation_checks.py
src/xau_system/: __init__.py  config.py  implementation.py
src/xau_system/api/: app_fastapi.py  service.py
src/xau_system/data/: live_price.py  loader.py  realtime.py
src/xau_system/ensemble/: consensus.py
src/xau_system/features/: fundamental.py  indicators.py  preprocessing.py
src/xau_system/integrations/: __init__.py  mt5_bridge.py  tradingview_feed.py
src/xau_system/models/: cnn_pattern.py  hybrid_model.py  temporal_model.py
src/xau_system/regime/: detector.py
src/xau_system/risk/: position_sizing.py
src/xau_system/rl/: experience_buffer.py  online_trainer.py  online_update.py  reward.py
src/xau_system/ui/: __init__.py  dashboard.py
src/xau_system/utils/: types.py
tests/: test_implementation_module.py  test_online_training_and_tradingview.py  test_price_and_mt5.py  test_realtime_and_fundamental.py  test_risk_and_reward.py  test_ui_dashboard.py
