[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xau-ai-architecture"
version = "0.1.0"
description = "Arquitectura híbrida IA para señales de trading en XAU/USD"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.5",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
ml = ["tensorflow>=2.14"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
